[package]
name = "dropcutter"
version = "0.1.0"
authors = ["Eric Trombly <etrombly@yahoo.com>"]
edition = "2018"

[dependencies]
rayon = "1.4.0"
float-cmp = "0.8.0"
structopt = "0.3.17"
anyhow = "1.0.32"
clap = "2.33.3"
indicatif = "0.15.0"
#imgui = "0.4.0"
#imgui-winit-support = "0.4.0"
#imgui-rs-vulkan-renderer = "0.4.2"
#winit = "0.22.2"

[dependencies.printer_geo]
path = "../printer_geo"
