[package]
name = "dropcutter"
version = "0.1.5"
authors = ["Eric Trombly <etrombly@yahoo.com>"]
edition = "2018"

[dependencies]
rayon = "1.4.0"
float-cmp = "0.8.0"
structopt = "0.3.17"
anyhow = "1.0.32"
clap = "2.33.3"
indicatif = "0.15.0"
bincode = "1.3.1"

[dependencies.printer_geo]
path = "../printer_geo"
#git = "https://github.com/etrombly/printer_geo"
