[package]
name = "dropcutter"
version = "0.1.5"
authors = ["Eric Trombly <etrombly@yahoo.com>"]
edition = "2018"

[dependencies]
rayon = "1.4.1"
float-cmp = "0.8.0"
structopt = "0.3.20"
anyhow = "1.0.33"
clap = "2.33.3"
bincode = "1.3.1"

[dependencies.indicatif]
#version = "0.15.0"
git = "https://github.com/mibac138/indicatif"
branch = "mpb-tick"
features = ["rayon"]

[dependencies.printer_geo]
path = "../printer_geo"
#git = "https://github.com/etrombly/printer_geo"

[profile.release]
lto=true
codegen-units=1
